--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chardet==3.0.4
 click==6.6
 dj-database-url==0.4.2
 Django==1.11.5
+django-bootstrap-datepicker==1.2.3
 django-forms-bootstrap==3.1.0
 docopt==0.6.2
 extras==0.0.3
@@ -20,8 +21,10 @@ Jinja2==2.7.3
 linecache2==1.0.0
 Mako==1.0.7
 MarkupSafe==0.23
+olefile==0.44
 passlib==1.6.2
 pbr==1.9.1
+Pillow==4.3.0
 pipreqs==0.4.9
 psycopg2==2.7.3.1
 pycrypto==2.6.1
